@@ -1,3 +1,8 @@
+Tue Aug 21 13:17:19 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* //Makefile.am : fixed an error I propagated to nearly all
+	  Makefiles.am on Saturday
+
 Tue Aug 21 13:10:03 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libexslt/math.c libxslt/numbers.c: use xmlXPathIsNaN() and
